Fix current day alignment in date-picker

--- a/app/styles/components/_date-picker.scss
+++ b/app/styles/components/_date-picker.scss
@@ -102,4 +102,5 @@
   font-weight: 900;
   color: black;
   border: 1px solid $border-color;
+  line-height: 26px;
 }
